--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +5,7 @@ body {
 }
 
 header {
-  background-color: #180e30;
+  background-color: #1e2a44;
   color: white;
   padding: 10px 20px;
   display: flex;
@@ -29,7 +28,7 @@ header {
 .logo-img {
   width: 50px;
   height: 50px;
-
+  border-radius: 50%;
   object-fit: cover;
 }
 
@@ -42,6 +41,8 @@ header {
   overflow: hidden;
   height: 40px;
   padding: 0 10px;
+      text-decoration: none;
+ 
 }
 
 .search-bar input {
@@ -73,6 +74,7 @@ nav {
   max-width: 1200px;
   background-color: #e0e0e0;
   padding: 10px 0;
+  
 }
 
 nav ul {
@@ -89,7 +91,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #180e30;
+  color: #1e2a44;
   text-decoration: none;
   font-size: 1em;
   padding: 5px 10px;
@@ -99,6 +101,8 @@ nav ul li a:hover {
   text-decoration: underline;
   background-color: #d0d0d0;
   border-radius: 5px;
+  text-decoration: none;
+ 
 }
 
 main {
@@ -111,7 +115,7 @@ main h1 {
   color: #1e2a44;
 }
 
-
+/* Página Home */
 .content-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -131,6 +135,7 @@ main h1 {
   height: 300px;
 }
 
+/* Página Sobre */
 article {
   margin-bottom: 20px;
 }
@@ -150,6 +155,7 @@ article p {
   line-height: 1.6;
 }
 
+/* Página Notícias */
 .image-placeholder {
   width: 300px;
   height: 200px;
@@ -160,6 +166,7 @@ article p {
   margin: 10px 0;
 }
 
+/* Página Políticas */
 .policy-list {
   list-style: none;
   padding: 0;
@@ -187,6 +194,7 @@ article p {
   line-height: 1.6;
 }
 
+/* Página Departamentos */
 .departments-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -214,7 +222,7 @@ article p {
   color: #666;
 }
 
-
+/* Página Eventos */
 .events-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
