--- a/style.css
+++ b/style.css
@@ -70,11 +70,9 @@ header {
 }
 
 nav {
-  width: 100%;
-  max-width: 1200px;
   background-color: #e0e0e0;
   padding: 10px 0;
-  
+  height: 1.5rem;
 }
 
 nav ul {
@@ -84,6 +82,7 @@ nav ul {
   display: flex;
   justify-content: center;
   gap: 20px;
+  
 }
 
 nav ul li {
@@ -93,7 +92,7 @@ nav ul li {
 nav ul li a {
   color: #1e2a44;
   text-decoration: none;
-  font-size: 1em;
+  font-size: 1rem;
   padding: 5px 10px;
 }
 
@@ -102,7 +101,6 @@ nav ul li a:hover {
   background-color: #d0d0d0;
   border-radius: 5px;
   text-decoration: none;
- 
 }
 
 main {
