--- a/style.css
+++ b/style.css
@@ -137,23 +137,34 @@ main h1 {
 }
 
 /* Página Sobre */
-article {
+main {
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+main h1 {
+  color: #1e2a44;
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.about-section {
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  padding: 20px;
   margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-article h2 {
-  font-size: 1.5em;
-  margin: 10px 0;
-}
-
-article h3 {
-  font-size: 1.2em;
+.about-section p {
+  font-size: 1.1em;
   color: #666;
-  margin: 5px 0;
-}
-
-article p {
   line-height: 1.6;
+  text-align: justify;
+  margin: 0;
 }
 
 /* Página Notícias */
@@ -165,6 +176,13 @@ article p {
   align-items: center;
   justify-content: center;
   margin: 10px 0;
+}
+p{
+   font-size: 1.1em;
+  color: #666;
+  line-height: 1.6;
+  text-align: justify;
+  margin: 0;
 }
 
 /* Página Políticas */
