--- a/style.css
+++ b/style.css
@@ -227,28 +227,28 @@ main h1 {
 /* Página Políticas */
 .policy-list {
   list-style: none;
-  padding: 0;
+  padding: 2rem;
 }
 
 .policy-list li {
   display: flex;
   align-items: flex-start;
-  margin-bottom: 15px;
+  margin-bottom: 3rem;
 }
 
 .policy-list li span {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 3rem;
+  height: 2rem;
   background-color: #e9ecef;
   border-radius: 50%;
   text-align: center;
-  line-height: 20px;
-  margin-right: 10px;
+  line-height: 30px;
+  margin-right: 20px;
 }
 
 .policy-list li p {
-  margin: 0;
+  margin: 10px 0;
   line-height: 1.6;
 }
 
